--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "tabWidth": 4,
     "printWidth": 140,
     "bracketSpacing": true,
-    "spaceBeforeFunctionParen": true
+    "spaceBeforeFunctionParen": true,
+    "htmlWhitespaceSensitivity": "strict"
 }
