--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "nuxt": "^3.13.2",
         "nuxt-build-cache": "^0.1.1",
         "pinia": "^2.2.4",
+        "sass-migrator": "^2.2.0",
         "undici": "^6.19.8",
         "vue": "latest",
         "vue-router": "latest"
